pbr_DBexport_Commit1

--- a/WP1/data_cleaning_DBexport/_1_log/4_log_dbexport.ipynb
+++ b/WP1/data_cleaning_DBexport/_1_log/4_log_dbexport.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,66 +311,6 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2021-4-20 13:3:46</td>\n",
-       "      <td>1618916626</td>\n",
-       "      <td>209680</td>\n",
-       "      <td>4</td>\n",
-       "      <td>FPC11_FPP11</td>\n",
-       "      <td>Arduino</td>\n",
-       "      <td>more than 2 communication restarts, try powerd...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2021-4-20 13:3:58</td>\n",
-       "      <td>1618916638</td>\n",
-       "      <td>271269</td>\n",
-       "      <td>3</td>\n",
-       "      <td>FPC14</td>\n",
-       "      <td>program</td>\n",
-       "      <td>step ID - Changed (new and old value)</td>\n",
-       "      <td>4_WaterAcid</td>\n",
-       "      <td>5_empty</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2021-4-20 13:4:1</td>\n",
-       "      <td>1618916641</td>\n",
-       "      <td>101959</td>\n",
-       "      <td>3</td>\n",
-       "      <td>FPC14</td>\n",
-       "      <td>program</td>\n",
-       "      <td>start at - Changed (new and old value)</td>\n",
-       "      <td>sellected step at...</td>\n",
-       "      <td>first step</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2021-4-20 13:4:6</td>\n",
-       "      <td>1618916646</td>\n",
-       "      <td>386245</td>\n",
-       "      <td>3</td>\n",
-       "      <td>FPC14</td>\n",
-       "      <td>program</td>\n",
-       "      <td>procedure running - Changed</td>\n",
-       "      <td>not active</td>\n",
-       "      <td>active</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2021-4-20 13:4:7</td>\n",
-       "      <td>1618916647</td>\n",
-       "      <td>639887</td>\n",
-       "      <td>2</td>\n",
-       "      <td>FPC14</td>\n",
-       "      <td>program</td>\n",
-       "      <td>Program F_ThalaPseu_HalfNutr started</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -382,35 +322,13 @@
        "2  2021-4-20 13:1:38  1618916498    812633     4  FPC11_FPP11   Arduino   \n",
        "3  2021-4-20 13:2:20  1618916540    214501     4  FPC11_FPP11   Arduino   \n",
        "4   2021-4-20 13:3:3  1618916583    212528     4  FPC11_FPP11   Arduino   \n",
-       "5  2021-4-20 13:3:46  1618916626    209680     4  FPC11_FPP11   Arduino   \n",
-       "6  2021-4-20 13:3:58  1618916638    271269     3        FPC14   program   \n",
-       "7   2021-4-20 13:4:1  1618916641    101959     3        FPC14   program   \n",
-       "8   2021-4-20 13:4:6  1618916646    386245     3        FPC14   program   \n",
-       "9   2021-4-20 13:4:7  1618916647    639887     2        FPC14   program   \n",
        "\n",
-       "                                             Message                Value1  \\\n",
-       "0  more than 2 communication restarts, try powerd...                   NaN   \n",
-       "1  more than 2 communication restarts, try powerd...                   NaN   \n",
-       "2  more than 2 communication restarts, try powerd...                   NaN   \n",
-       "3  more than 2 communication restarts, try powerd...                   NaN   \n",
-       "4  more than 2 communication restarts, try powerd...                   NaN   \n",
-       "5  more than 2 communication restarts, try powerd...                   NaN   \n",
-       "6              step ID - Changed (new and old value)           4_WaterAcid   \n",
-       "7             start at - Changed (new and old value)  sellected step at...   \n",
-       "8                        procedure running - Changed            not active   \n",
-       "9               Program F_ThalaPseu_HalfNutr started                   NaN   \n",
-       "\n",
-       "       Value2  \n",
-       "0         NaN  \n",
-       "1         NaN  \n",
-       "2         NaN  \n",
-       "3         NaN  \n",
-       "4         NaN  \n",
-       "5         NaN  \n",
-       "6     5_empty  \n",
-       "7  first step  \n",
-       "8      active  \n",
-       "9         NaN  "
+       "                                             Message Value1 Value2  \n",
+       "0  more than 2 communication restarts, try powerd...    NaN    NaN  \n",
+       "1  more than 2 communication restarts, try powerd...    NaN    NaN  \n",
+       "2  more than 2 communication restarts, try powerd...    NaN    NaN  \n",
+       "3  more than 2 communication restarts, try powerd...    NaN    NaN  \n",
+       "4  more than 2 communication restarts, try powerd...    NaN    NaN  "
       ]
      },
      "execution_count": 6,
@@ -425,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,14 +411,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data frame Info\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 570819 entries, 6 to 863803\n",
       "Data columns (total 8 columns):\n",
@@ -516,24 +433,7 @@
       " 7   old_value   570819 non-null  object        \n",
       "dtypes: datetime64[ns](1), int16(1), int32(1), int64(1), int8(1), object(3)\n",
       "memory usage: 29.9+ MB\n",
-      "None\n",
-      "\n",
-      "Nullvalues in each columns\n",
-      "date_time     0\n",
-      "time_epoch    0\n",
-      "category      0\n",
-      "unit          0\n",
-      "parameter     0\n",
-      "message       0\n",
-      "new_value     0\n",
-      "old_value     0\n",
-      "dtype: int64\n",
-      "\n",
-      "Lists of unique values in unit column\n",
-      "[ 1  2  3  4  5  6  7  8  9 10 11]\n",
-      "\n",
-      "Total number of unique values in unit column\n",
-      "11\n"
+      "None\n"
      ]
     }
    ],
@@ -550,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +474,7 @@
        "'date_time`,`time_epoch`,`category`,`unit`,`parameter`,`message`,`new_value`,`old_value'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +495,7 @@
        "(570819, 8)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,9 +529,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date_time</th>\n",
+       "      <th>time_epoch</th>\n",
+       "      <th>category</th>\n",
+       "      <th>unit</th>\n",
+       "      <th>parameter</th>\n",
+       "      <th>message</th>\n",
+       "      <th>new_value</th>\n",
+       "      <th>old_value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-04-20 13:03:58</td>\n",
+       "      <td>1618916638</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>step ID - Changed (new and old value)</td>\n",
+       "      <td>4_WaterAcid</td>\n",
+       "      <td>5_empty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-04-20 13:04:01</td>\n",
+       "      <td>1618916641</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>start at - Changed (new and old value)</td>\n",
+       "      <td>sellected step at...</td>\n",
+       "      <td>first step</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-04-20 13:04:06</td>\n",
+       "      <td>1618916646</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>procedure running - Changed</td>\n",
+       "      <td>not active</td>\n",
+       "      <td>active</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-04-20 13:04:07</td>\n",
+       "      <td>1618916647</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Program F_ThalaPseu_HalfNutr started</td>\n",
+       "      <td>empty</td>\n",
+       "      <td>empty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-04-20 13:04:07</td>\n",
+       "      <td>1618916647</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Step 4_WaterAcid started</td>\n",
+       "      <td>empty</td>\n",
+       "      <td>empty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2021-04-20 13:04:10</td>\n",
+       "      <td>1618916650</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>procedure running - Changed</td>\n",
+       "      <td>active</td>\n",
+       "      <td>not active</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2021-04-20 13:04:11</td>\n",
+       "      <td>1618916651</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>_======program F_ThalaPseu_HalfNutr stopped be...</td>\n",
+       "      <td>empty</td>\n",
+       "      <td>empty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2021-04-20 13:04:23</td>\n",
+       "      <td>1618916663</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>start at - Changed (new and old value)</td>\n",
+       "      <td>sellected step at...</td>\n",
+       "      <td>first step</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2021-04-20 13:04:23</td>\n",
+       "      <td>1618916663</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>procedure running - Changed</td>\n",
+       "      <td>not active</td>\n",
+       "      <td>active</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2021-04-20 13:04:25</td>\n",
+       "      <td>1618916665</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Program F_ThalaPseu_HalfNutr started</td>\n",
+       "      <td>empty</td>\n",
+       "      <td>empty</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date_time  time_epoch  category  unit  parameter  \\\n",
+       "0 2021-04-20 13:03:58  1618916638         3     1          2   \n",
+       "1 2021-04-20 13:04:01  1618916641         3     1          2   \n",
+       "2 2021-04-20 13:04:06  1618916646         3     1          2   \n",
+       "3 2021-04-20 13:04:07  1618916647         2     1          2   \n",
+       "4 2021-04-20 13:04:07  1618916647         2     1          2   \n",
+       "5 2021-04-20 13:04:10  1618916650         3     1          2   \n",
+       "6 2021-04-20 13:04:11  1618916651         2     1          2   \n",
+       "7 2021-04-20 13:04:23  1618916663         3     1          2   \n",
+       "8 2021-04-20 13:04:23  1618916663         3     1          2   \n",
+       "9 2021-04-20 13:04:25  1618916665         2     1          2   \n",
+       "\n",
+       "                                             message             new_value  \\\n",
+       "0              step ID - Changed (new and old value)           4_WaterAcid   \n",
+       "1             start at - Changed (new and old value)  sellected step at...   \n",
+       "2                        procedure running - Changed            not active   \n",
+       "3               Program F_ThalaPseu_HalfNutr started                 empty   \n",
+       "4                           Step 4_WaterAcid started                 empty   \n",
+       "5                        procedure running - Changed                active   \n",
+       "6  _======program F_ThalaPseu_HalfNutr stopped be...                 empty   \n",
+       "7             start at - Changed (new and old value)  sellected step at...   \n",
+       "8                        procedure running - Changed            not active   \n",
+       "9               Program F_ThalaPseu_HalfNutr started                 empty   \n",
+       "\n",
+       "    old_value  \n",
+       "0     5_empty  \n",
+       "1  first step  \n",
+       "2      active  \n",
+       "3       empty  \n",
+       "4       empty  \n",
+       "5  not active  \n",
+       "6       empty  \n",
+       "7  first step  \n",
+       "8      active  \n",
+       "9       empty  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tbl_logdata = pd.read_sql('SELECT * FROM tbl_log_data', database_connection)\n",
     "tbl_logdata.head(10)"
@@ -837,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1086,10 +1175,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "5b3e9ff110fca189b640152dbca1582818d88c9c2a9ef25df7a407523fb4d550"
+   "hash": "4c003f82c03b36fef287bdd35e08b972b8ba2e96746a620b0947100bdbd54581"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('main')",
+   "display_name": "Python 3.9.8 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -1103,7 +1192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.8"
   },
   "orig_nbformat": 4
  },
