cumulative hour data commit

--- a/WP1/data_cleaning_DBexport/_2_pbr/3__pbr_dbexport.ipynb
+++ b/WP1/data_cleaning_DBexport/_2_pbr/3__pbr_dbexport.ipynb
@@ -114,7 +114,7 @@
     "    return species_id, trial_no, unit_id\n",
     "\n",
     "# Preprocessing the data seting/ adding values and data types\n",
-    "def pbr_preProcess(pbr_rawDF):\n",
+    "def pbr_preProcess(pbr_rawDF, filename):\n",
     "    variable_list = set_varables(filename)\n",
     "    pbr_raw_tmp1 = pbr_rawDF.copy()\n",
     "    pbr_raw_tmp1.insert(loc=0, column='trial_no', value=variable_list[1])\n",
@@ -183,7 +183,7 @@
     "if (filename not in lines):\n",
     "    file_path=  os.path.join(_dir_path, filename)\n",
     "    pbr_rawDF = pd.read_csv(file_path, sep=',')\n",
-    "    pbr_cleaned = pbr_preProcess(pbr_rawDF)\n",
+    "    pbr_cleaned = pbr_preProcess(pbr_rawDF, filename)\n",
     "    pbr_preprocessed = missingValue_imputation(pbr_cleaned)\n",
     "    try:\n",
     "        export_status = pbr_exporttoDB(pbr_preprocessed)\n",
