--- a/WP1/data_cleaning_DBexport/_3_cumulativeDay/1_sumDAY_preprocessing.ipynb
+++ b/WP1/data_cleaning_DBexport/_3_cumulativeDay/1_sumDAY_preprocessing.ipynb
@@ -3642,7 +3642,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "time_stamp, date_time, unit, trial_no, species\n",
+    "\n",
+    "CD (g/l)                    : D_CD_gpl\n",
+    "CO2 to algae conversion     : Co2_Conv\n",
+    "Daily CO2 consumption(g)    : D_CO2_g\n",
+    "Daily CO2 consumption(g/m)  : D_CO2_gpm\n",
+    "Daily CO2 conversion(g/g)   : D_Co2_Conv_gpg\n",
+    "Daily Feed(L)               : D_Feed_l\n",
+    "Daily Harvest(L)            : D_Harvest_l\n",
+    "Daily Harvested algae(g)    : D_Harvest_Algae_g\n",
+    "Daily PAR(mol/m)            : D_PAR_molpm\n",
+    "Daily efficiency (%)        : D_eff_percent\n",
+    "Daily productivity (g)      : D_Productivity_g\n",
+    "Daily productivity (g/m)    : D_Productivity_gpm\n",
+    "PAR to algae conversion     : PAR_2Algae_Conv\n",
+    "reactor surface (m)         : R_Surface_m\n",
+    "reactor biomass (kg)        : R_Biomass_kg\n",
+    "reactor volume (l)          : R_Volume_l\n",
+    "\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
