--- a/WP1/data_cleaning_DBexport/_3_cumulativeDay/2_sumDay_DBExport.ipynb
+++ b/WP1/data_cleaning_DBexport/_3_cumulativeDay/2_sumDay_DBExport.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "15                                               None    _16_FPC23_NaCho.csv  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,26 +402,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# SET TRIAL NUMBER FOR SELECT THE DATA FROM LOG\n",
-    "trial_no = 1\n",
-    "# get file Name\n",
-    "file_name = all_instances.query('instance == @trial_no')['raw_file_name'][0]  #file_name = file_name[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No columns with missing values\n",
+      "\n",
+      "_1_FPC13_ChCal_1.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "#List exported files\n",
+    "with open('./exported_list.txt', 'r') as f:\n",
+    "    print(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SET TRIAL NUMBER FOR SELECT THE DATA FROM LOG\n",
+    "trial_no = 2\n",
+    "# get file Name\n",
+    "file_name = all_instances.query('instance == @trial_no')['raw_file_name'][trial_no-1]  #file_name = file_name[0]\n",
+    "#file_name = file_name[trial_no-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "file is exported\n"
      ]
     }
