mysql connection edit

--- a/WP1/data_cleaning_DBexport/_1_log/2_indexTable_Export.ipynb
+++ b/WP1/data_cleaning_DBexport/_1_log/2_indexTable_Export.ipynb
@@ -33,17 +33,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set file name\n",
-    "file_name = '..\\..\\..\\dataExport\\LOGdata\\log_2022_4_20.csv'"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "from datetime import date\n",
+    "import sqlalchemy\n",
+    "import pymysql\n",
+    "\n",
+    "import warnings    # to avoid warning during executions\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['log_2022_4_20.csv',\n",
+       " 'log_2022_4_21.csv',\n",
+       " 'log_2022_5_18.csv',\n",
+       " 'log_2022_5_3.csv',\n",
+       " '__LOGdata']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load all the file names into a list (files in the LOgData folder)\n",
+    "os.getcwd()\n",
+    "_dir_path = '../../../dataExport/LOGdata'\n",
+    "raw_data = os.listdir(_dir_path)\n",
+    "raw_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set file name\n",
+    "file_name = '..\\..\\..\\dataExport\\LOGdata\\log_2022_5_18.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,37 +98,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['FPC14' 'FFU' 'FPC22' 'FPC21' 'FPC23' 'FPC13' 'FPC24' 'FPC11' 'Product'\n",
-      " 'FPC12' 'FPP']\n",
-      "['Arduino' 'program' 'T61' 'water' 'T10' 'Reactor' 'T71' 'pneumatic'\n",
-      " 'autoSyncMonitor' 'T42A' 'harvest' 'calculations' 'P1L' 'feeding' 'T64'\n",
-      " 'T42' 'T53' 'T51' 'T73' 'T74' 'T65' 'T63' 'T72' 'T52' 'T54' 'PT1_V4'\n",
-      " 'T55' 'T43' 'LEDlighting' 'RM29' 'RM6' 'V74' 'RM12' 'RM13' 'RM14' 'RM15'\n",
-      " 'RM16' 'RM17' 'RM19' 'RM2' 'RM21' 'RM22' 'RM23' 'T41A' 'T43A' 'RM35'\n",
-      " 'RM4' 'RM5' 'RM7' 'P42' 'RM1' 'RM30' 'Arduino_QG' 'Arduino_pH' 'V3' 'P1R'\n",
-      " 'P2R' 'CO2_V2' 'R1' 'PTdiff_K2' 'L1W' 'Arduino_TT1' 'Arduino_LT1'\n",
-      " 'Arduino1_LT52' 'Arduino2_LT72' 'Arduino1_LT41' 'Arduino2_LT61'\n",
-      " 'AutoLink' 'P43' 'V42' 'P10' 'V11' 'V8' 'LT1' 'RM3' 'RM11' 'RM8' 'M1'\n",
-      " 'P2L' 'V61' 'P11' 'Recipes' 'Products' 'L1' 'V6' 'V1' 'V72' 'chiller'\n",
-      " 'T62' 'V71' 'V62' 'P12' 'V43' 'L1FR' 'L1R' 'L1B' 'LT10' 'M10' 'V63'\n",
-      " 'RM18' 'Arduino1' 'V52' 'V64' 'PT10' 'TT0' 'waste' 'V51' 'RM20' 'RM33'\n",
-      " 'AutoTemplateSync' 'Arduino2_LT73' 'Arduino_CO2' 'Arduino2_LT63'\n",
-      " 'Arduino2_LT65' 'Arduino1_LT53' 'Arduino2_LT64' 'Arduino2_LT75'\n",
-      " 'Arduino1_LT54' 'Arduino1_LT45' 'Arduino2_LT74' 'Arduino1_LT55'\n",
-      " 'Arduino2_LT10' 'Arduino2_LT71' 'Arduino_TT0' 'Arduino1_LT42'\n",
-      " 'Arduino1_LT43' 'Arduino1_LT51' 'Arduino2_LT62' 'Arduino2' 'triggers'\n",
-      " 'harvestTank' 'RM10' 'RM24' 'RM25' 'RM26' 'RM27' 'RM28' 'RM31' 'RM32'\n",
-      " 'RM34' 'RM36' 'RM37' 'RM38' 'RM39' 'RM40' 'RM9' 'Arduino_QR' 'Arduino_QB'\n",
-      " 'Arduino_QC' 'P1' 'P2' 'Arduino_PT1' 'Arduino_PT2' 'Arduino_FT2'\n",
-      " 'Arduino_QT' 'T75' 'T41' 'T44' 'T45' 'Arduino1_PT10' 'Arduino1_PT11'\n",
-      " 'Arduino2_noInUse']\n"
+      "['FFU' 'FPC23' 'FPC14' 'FPC22' 'FPC21' 'FPC12' 'FPC11' 'FPC24' 'FPC13'\n",
+      " 'Product']\n",
+      "['Arduino' 'T71' 'calculations' 'LEDlighting' 'program' 'harvest'\n",
+      " 'Reactor' 'T10' 'feeding' 'water' 'V55' 'V3' 'P1L' 'LT1' 'AutoLink' 'T64'\n",
+      " 'T42' 'T53' 'T51' 'T73' 'T74' 'T65' 'T63' 'T72' 'T52' 'T54' 'pneumatic'\n",
+      " 'autoSyncMonitor' 'T61' 'P1R' 'P2R' 'P11' 'T42A' 'T43' 'L1' 'L1W' 'R1'\n",
+      " 'PTdiff_K2' 'PT1_V4' 'T55' 'P2L' 'CO2_V2' 'T43A' 'RM29' 'RM22' 'RM21'\n",
+      " 'RM23' 'RM5' 'V1' 'RM19' 'Arduino1_LT52' 'Arduino2_LT72' 'Arduino1_LT41'\n",
+      " 'Arduino2_LT61' 'Arduino_LT1' 'Arduino2_LT10' 'Arduino_CO2'\n",
+      " 'AutoTemplateSync' 'Arduino2_LT73' 'Arduino2_LT64' 'Arduino2_LT75'\n",
+      " 'Arduino1_LT43' 'Arduino1_LT45' 'Arduino1_LT54' 'Arduino1_LT55'\n",
+      " 'Arduino2_LT63' 'Arduino2_LT71' 'Arduino2_LT74' 'Arduino1_LT42'\n",
+      " 'Arduino1_LT53' 'Arduino2_LT65' 'Arduino_TT0' 'Arduino1_LT51'\n",
+      " 'Arduino_pH' 'Arduino2_LT62' 'Arduino2_noInUse' 'Arduino1_PT10'\n",
+      " 'Arduino1_PT11' 'Arduino2' 'RM4' 'RM7' 'Arduino1' 'triggers'\n",
+      " 'Arduino_TT1' 'Arduino_QB' 'RM1' 'RM10' 'RM11' 'RM12' 'RM13' 'RM14'\n",
+      " 'RM15' 'RM16' 'RM17' 'RM18' 'RM2' 'RM20' 'RM24' 'RM25' 'RM26' 'RM27'\n",
+      " 'RM28' 'RM3' 'RM30' 'RM31' 'RM32' 'RM33' 'RM34' 'RM35' 'RM36' 'RM37'\n",
+      " 'RM38' 'RM39' 'RM40' 'RM6' 'RM8' 'RM9' 'T41' 'T41A' 'T44' 'T45' 'T62'\n",
+      " 'T75' 'harvestTank' 'Arduino_QG' 'Arduino_QR' 'Arduino_QC']\n"
      ]
     }
    ],
@@ -106,7 +147,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(tbl_values[0].tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +188,473 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# database connection with mariaDB using SQL Alchemy\n",
+    "def dbConn_sqlAlc():\n",
+    "    database_username = 'root'\n",
+    "    database_password = 'password'\n",
+    "    database_ip       = '127.0.0.1:3306'\n",
+    "    database_name     = 'data_dashboard'\n",
+    "    database_connection = sqlalchemy.create_engine('mariadb+mariadbconnector://{0}:{1}@{2}/{3}'.\n",
+    "                                               format(database_username, database_password, \n",
+    "                                                      database_ip, database_name))\n",
+    "    return database_connection\n",
+    "\n",
+    "# # database connection with mariaDB using pymysql package\n",
+    "def dBCon_Maria():\n",
+    "    connection = pymysql.connect(host='localhost',\n",
+    "                            user='root',\n",
+    "                            password='password',\n",
+    "                            db='data_dashboard')\n",
+    "    return connection\n",
+    "\n",
+    "\n",
+    "# connection = dBCon_Maria()\n",
+    "# cursor=connection.cursor()                                            \n",
+    "# database_connection = dbConn_sqlAlc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection = dBCon_Maria()\n",
+    "cursor=connection.cursor()\n",
+    "trial_no = 2\n",
+    "tbl_lookup = pd.read_sql(\"SELECT * FROM tbl_pbr_lookup WHERE instance = %s\", connection, params=[trial_no])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>instance</th>\n",
+       "      <th>unit</th>\n",
+       "      <th>species</th>\n",
+       "      <th>start_date</th>\n",
+       "      <th>end_date</th>\n",
+       "      <th>remark</th>\n",
+       "      <th>raw_file_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1634652000</td>\n",
+       "      <td>1644488995</td>\n",
+       "      <td>None</td>\n",
+       "      <td>_2_FPC13_ChCal_2.csv</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   instance  unit  species  start_date    end_date remark  \\\n",
+       "0         2     6        1  1634652000  1644488995   None   \n",
+       "\n",
+       "          raw_file_name  \n",
+       "0  _2_FPC13_ChCal_2.csv  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tbl_lookup.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: {2} unit_name: {'FFU'}\n",
+      "ID: {8} unit_name: {'FPC11'}\n",
+      "ID: {10} unit_name: {'FPC12'}\n",
+      "ID: {6} unit_name: {'FPC13'}\n",
+      "ID: {1} unit_name: {'FPC14'}\n",
+      "ID: {4} unit_name: {'FPC21'}\n",
+      "ID: {3} unit_name: {'FPC22'}\n",
+      "ID: {5} unit_name: {'FPC23'}\n",
+      "ID: {7} unit_name: {'FPC24'}\n",
+      "ID: {11} unit_name: {'FPP'}\n",
+      "ID: {9} unit_name: {'Product'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# just a function for test the db connection is working or not\n",
+    "connection = dBCon_Maria()\n",
+    "cursor=connection.cursor()\n",
+    "cursor.execute(\"SELECT unit_id, unit_name FROM tbl_unit\")\n",
+    "for (unit_id, unit_name) in cursor:\n",
+    "    print(\"ID:\", {unit_id}, \"unit_name:\", {unit_name})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(13,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# just a function for test the db connection is working or not\n",
+    "connection = dBCon_Maria()\n",
+    "cursor=connection.cursor()\n",
+    "cursor.execute(\"SELECT MAX(unit_id) FROM tbl_unit\")\n",
+    "result = cursor.fetchone()\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['FFU', 'FPC23', 'FPC14', 'FPC22', 'FPC21', 'FPC12', 'FPC11',\n",
+       "       'FPC24', 'FPC13', 'Product'], dtype=object)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_unit = tbl_values[0]\n",
+    "log_unit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_unit = log_unit.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FFU\n",
+      "FPC23\n",
+      "FPC14\n",
+      "FPC22\n",
+      "FPC21\n",
+      "FPC12\n",
+      "FPC11\n",
+      "FPC24\n",
+      "FPC13\n",
+      "Product\n",
+      "FPC41\n",
+      "FPC42\n"
+     ]
+    }
+   ],
+   "source": [
+    "log_unit.append('FPC42')\n",
+    "for value in log_unit:\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert unique units into index table tbl_unit\n",
+    "connection = dBCon_Maria()\n",
+    "cursor=connection.cursor()\n",
+    "query = 'INSERT IGNORE INTO tbl_unit (unit_name) VALUES (%s)'\n",
+    "cursor.executemany(query, log_unit)\n",
+    "connection.commit() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Arduino',\n",
+       " 'T71',\n",
+       " 'calculations',\n",
+       " 'LEDlighting',\n",
+       " 'program',\n",
+       " 'harvest',\n",
+       " 'Reactor',\n",
+       " 'T10',\n",
+       " 'feeding',\n",
+       " 'water',\n",
+       " 'V55',\n",
+       " 'V3',\n",
+       " 'P1L',\n",
+       " 'LT1',\n",
+       " 'AutoLink',\n",
+       " 'T64',\n",
+       " 'T42',\n",
+       " 'T53',\n",
+       " 'T51',\n",
+       " 'T73',\n",
+       " 'T74',\n",
+       " 'T65',\n",
+       " 'T63',\n",
+       " 'T72',\n",
+       " 'T52',\n",
+       " 'T54',\n",
+       " 'pneumatic',\n",
+       " 'autoSyncMonitor',\n",
+       " 'T61',\n",
+       " 'P1R',\n",
+       " 'P2R',\n",
+       " 'P11',\n",
+       " 'T42A',\n",
+       " 'T43',\n",
+       " 'L1',\n",
+       " 'L1W',\n",
+       " 'R1',\n",
+       " 'PTdiff_K2',\n",
+       " 'PT1_V4',\n",
+       " 'T55',\n",
+       " 'P2L',\n",
+       " 'CO2_V2',\n",
+       " 'T43A',\n",
+       " 'RM29',\n",
+       " 'RM22',\n",
+       " 'RM21',\n",
+       " 'RM23',\n",
+       " 'RM5',\n",
+       " 'V1',\n",
+       " 'RM19',\n",
+       " 'Arduino1_LT52',\n",
+       " 'Arduino2_LT72',\n",
+       " 'Arduino1_LT41',\n",
+       " 'Arduino2_LT61',\n",
+       " 'Arduino_LT1',\n",
+       " 'Arduino2_LT10',\n",
+       " 'Arduino_CO2',\n",
+       " 'AutoTemplateSync',\n",
+       " 'Arduino2_LT73',\n",
+       " 'Arduino2_LT64',\n",
+       " 'Arduino2_LT75',\n",
+       " 'Arduino1_LT43',\n",
+       " 'Arduino1_LT45',\n",
+       " 'Arduino1_LT54',\n",
+       " 'Arduino1_LT55',\n",
+       " 'Arduino2_LT63',\n",
+       " 'Arduino2_LT71',\n",
+       " 'Arduino2_LT74',\n",
+       " 'Arduino1_LT42',\n",
+       " 'Arduino1_LT53',\n",
+       " 'Arduino2_LT65',\n",
+       " 'Arduino_TT0',\n",
+       " 'Arduino1_LT51',\n",
+       " 'Arduino_pH',\n",
+       " 'Arduino2_LT62',\n",
+       " 'Arduino2_noInUse',\n",
+       " 'Arduino1_PT10',\n",
+       " 'Arduino1_PT11',\n",
+       " 'Arduino2',\n",
+       " 'RM4',\n",
+       " 'RM7',\n",
+       " 'Arduino1',\n",
+       " 'triggers',\n",
+       " 'Arduino_TT1',\n",
+       " 'Arduino_QB',\n",
+       " 'RM1',\n",
+       " 'RM10',\n",
+       " 'RM11',\n",
+       " 'RM12',\n",
+       " 'RM13',\n",
+       " 'RM14',\n",
+       " 'RM15',\n",
+       " 'RM16',\n",
+       " 'RM17',\n",
+       " 'RM18',\n",
+       " 'RM2',\n",
+       " 'RM20',\n",
+       " 'RM24',\n",
+       " 'RM25',\n",
+       " 'RM26',\n",
+       " 'RM27',\n",
+       " 'RM28',\n",
+       " 'RM3',\n",
+       " 'RM30',\n",
+       " 'RM31',\n",
+       " 'RM32',\n",
+       " 'RM33',\n",
+       " 'RM34',\n",
+       " 'RM35',\n",
+       " 'RM36',\n",
+       " 'RM37',\n",
+       " 'RM38',\n",
+       " 'RM39',\n",
+       " 'RM40',\n",
+       " 'RM6',\n",
+       " 'RM8',\n",
+       " 'RM9',\n",
+       " 'T41',\n",
+       " 'T41A',\n",
+       " 'T44',\n",
+       " 'T45',\n",
+       " 'T62',\n",
+       " 'T75',\n",
+       " 'harvestTank',\n",
+       " 'Arduino_QG',\n",
+       " 'Arduino_QR',\n",
+       " 'Arduino_QC']"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_prm = tbl_values[1].tolist()\n",
+    "log_prm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Insert unique units into index table tbl_unit\n",
+    "connection = dBCon_Maria()\n",
+    "cursor=connection.cursor()\n",
+    "query = 'INSERT IGNORE INTO tbl_log_parameters (prm_name) VALUES (%s)'\n",
+    "cursor.executemany(query, log_prm)\n",
+    "connection.commit() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,11 +1388,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "5b3e9ff110fca189b640152dbca1582818d88c9c2a9ef25df7a407523fb4d550"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('main')",
+   "display_name": "Python 3.10.4 ('main')",
    "language": "python",
    "name": "python3"
   },
@@ -882,9 +1403,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d8fd34dff8cbc24a9527e9490242a6d6fdd745231ebdb737d8653779b044c6d5"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
