--- a/WP1/data_cleaning_DBexport/_1_log/5_log_exportFinal.ipynb
+++ b/WP1/data_cleaning_DBexport/_1_log/5_log_exportFinal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        " '__LOGdata']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,17 +47,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'log_2022_5_18.csv'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# ========================= set file name to process the log data  ===========================.\n",
-    "filename = raw_data[1]"
+    "filename = raw_data[2]\n",
+    "filename"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,13 +122,13 @@
     "    .query('Type != 1')\n",
     "    .query('Unit == (\"FPC11\", \"FPC12\", \"FPC13\", \"FPC14\", \"FPC21\", \"FPC22\", \"FPC23\", \"FPC24\", \"FFU\", \"FPP\", \"Product\", \"scheduler\")')\n",
     "    .dropna(subset=['Parameter', 'Unit'])\n",
-    "    .drop(columns=['MicroSec'])\n",
+    "    #.drop(columns=['MicroSec'])\n",
     "    .assign(Unit = log_rawDF.Unit.map(tbl_unit.set_index('unit_name')['unit_id']),\n",
     "           Parameter = log_rawDF.Parameter.map(tbl_parameter.set_index('prm_name')['prm_id']),\n",
     "           Date_Time = pd.to_datetime(log_rawDF.Date_Time)\n",
     "           )\n",
     "    .astype({'Type' : 'int8', 'Unit' : 'int16', 'Parameter' : 'int32'})\n",
-    "    .rename(columns = {'Date_Time':'date_time', 'Time':'time_epoch', 'Type':'category', 'Unit':'unit', 'Parameter':'parameter', 'Message':'message', 'Value1': 'new_value', 'Value2':'old_value'})\n",
+    "    .rename(columns = {'Date_Time':'date_time', 'Time':'time_epoch', 'Type':'category', 'Unit':'unit', 'Parameter':'parameter', 'Message':'message'})\n",
     "    .fillna('empty')\n",
     "    #.sort_values('Time')\n",
     "    #.replace('/'',' ', regex=True)\n",
@@ -142,14 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data is present in the db - check and very the trial number in tbl_pbr_data\n"
+      "file is exported\n"
      ]
     }
    ],
@@ -177,16 +189,13 @@
     "    except Exception as e: print(e)\n",
     "\n",
     "else:\n",
-    "    print('data is present in the db - check and very the trial number in tbl_pbr_data')"
+    "    print('data is present in the db')"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "4c003f82c03b36fef287bdd35e08b972b8ba2e96746a620b0947100bdbd54581"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.8 ('.venv': venv)",
+   "display_name": "Python 3.10.4 ('main')",
    "language": "python",
    "name": "python3"
   },
@@ -200,9 +209,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d8fd34dff8cbc24a9527e9490242a6d6fdd745231ebdb737d8653779b044c6d5"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
