--- a/WP1/data_cleaning_DBexport/_3_cumulativeHour/2_sumHour_DBExport.ipynb
+++ b/WP1/data_cleaning_DBexport/_3_cumulativeHour/2_sumHour_DBExport.ipynb
@@ -92,7 +92,7 @@
     "                                                      database_ip, database_name))\n",
     "    return database_connection\n",
     "\n",
-    "# # database connection with mariaDB using Maria DB package\n",
+    "# # database connection with mariaDB using pymysql package\n",
     "def dBCon_Maria():\n",
     "    connection = pymysql.connect(host='localhost',\n",
     "                            user='root',\n",
@@ -240,11 +240,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "4c003f82c03b36fef287bdd35e08b972b8ba2e96746a620b0947100bdbd54581"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.8 ('.venv': venv)",
+   "display_name": "Python 3.10.4 ('main')",
    "language": "python",
    "name": "python3"
   },
@@ -258,9 +255,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d8fd34dff8cbc24a9527e9490242a6d6fdd745231ebdb737d8653779b044c6d5"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
