--- a/WP1/data_cleaning_DBexport/_1_log/5_log_exportFinal.ipynb
+++ b/WP1/data_cleaning_DBexport/_1_log/5_log_exportFinal.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,11 +28,10 @@
        "['log_2022_4_20.csv',\n",
        " 'log_2022_4_21.csv',\n",
        " 'log_2022_5_18.csv',\n",
-       " 'log_2022_5_3.csv',\n",
-       " '__LOGdata']"
+       " 'log_2022_5_3.csv']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +55,7 @@
        "'log_2022_5_18.csv'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +115,7 @@
     "        file.write(text);\n",
     "\n",
     "# data type conversion and droping rows if parameter column value is missing\n",
-    "def log_tweak(log_rawDF, tbl_unit, tbl_parameter):\n",
+    "def log_tweak(log_rawDF, tbl_unit):  #def log_tweak(log_rawDF, tbl_unit, tbl_parameter):\n",
     "    return (\n",
     "    log_rawDF\n",
     "    .query('Type != 1')\n",
@@ -124,10 +123,10 @@
     "    .dropna(subset=['Parameter', 'Unit'])\n",
     "    #.drop(columns=['MicroSec'])\n",
     "    .assign(Unit = log_rawDF.Unit.map(tbl_unit.set_index('unit_name')['unit_id']),\n",
-    "           Parameter = log_rawDF.Parameter.map(tbl_parameter.set_index('prm_name')['prm_id']),\n",
+    "           #Parameter = log_rawDF.Parameter.map(tbl_parameter.set_index('prm_name')['prm_id']),\n",
     "           Date_Time = pd.to_datetime(log_rawDF.Date_Time)\n",
     "           )\n",
-    "    .astype({'Type' : 'int8', 'Unit' : 'int16', 'Parameter' : 'int32'})\n",
+    "    .astype({'Type' : 'int8', 'Unit' : 'int16'}) #.astype({'Type' : 'int8', 'Unit' : 'int16', 'Parameter' : 'int32'})\n",
     "    .rename(columns = {'Date_Time':'date_time', 'Time':'time_epoch', 'Type':'category', 'Unit':'unit', 'Parameter':'parameter', 'Message':'message'})\n",
     "    .fillna('empty')\n",
     "    #.sort_values('Time')\n",
@@ -154,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -173,12 +172,12 @@
     "\n",
     "if (filename not in lines):\n",
     "    file_path=  os.path.join(_dir_path, filename)\n",
-    "    del_newline(file_path)\n",
+    "    #del_newline(file_path)\n",
     "    database_connection = dbConn_sqlAlc()\n",
     "    tbl_unit = pd.read_sql('SELECT unit_id, unit_name FROM tbl_unit', database_connection)\n",
-    "    tbl_parameter = pd.read_sql('SELECT prm_id, prm_name FROM tbl_log_parameters', database_connection)\n",
+    "    #tbl_parameter = pd.read_sql('SELECT prm_id, prm_name FROM tbl_log_parameters', database_connection)\n",
     "    log_rawDF = pd.read_csv(file_path, sep='*')\n",
-    "    log_cleaned = log_tweak(log_rawDF, tbl_unit, tbl_parameter)\n",
+    "    log_cleaned = log_tweak(log_rawDF, tbl_unit) #log_cleaned = log_tweak(log_rawDF, tbl_unit, tbl_parameter)\n",
     "    try:\n",
     "        export_status = log_exporttoDB(log_cleaned)\n",
     "        file1 = open(\"exported_list.txt\", \"a+\")\n",
@@ -195,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('main')",
+   "display_name": "Python 3.9.12 ('main')",
    "language": "python",
    "name": "python3"
   },
@@ -209,12 +208,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d8fd34dff8cbc24a9527e9490242a6d6fdd745231ebdb737d8653779b044c6d5"
+    "hash": "5b3e9ff110fca189b640152dbca1582818d88c9c2a9ef25df7a407523fb4d550"
    }
   }
  },
